/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    java
    id("io.freefair.lombok") version "8.11"
    application
}

dependencies {
    implementation("com.github.Zabbum:oelrlib:0.1.31")
    implementation("com.googlecode.lanterna:lanterna:3.2.0-alpha1")
    implementation("org.springframework.boot:spring-boot-starter-integration:3.4.0")
    implementation("org.springframework.boot:spring-boot-starter-websocket:3.4.0")
    implementation("org.springframework.integration:spring-integration-stomp:6.4.0")
    implementation("org.springframework.integration:spring-integration-websocket:6.4.0")
    testImplementation("org.springframework.boot:spring-boot-starter-test:3.4.0")
    testImplementation("org.springframework.integration:spring-integration-test:6.4.0")
}

group = "com.github.Zabbum"
version = "0.0.1-SNAPSHOT"
description = "oel-remake-client"
java.sourceCompatibility = JavaVersion.VERSION_17

application {
    mainClass = "com.github.zabbum.oelremakeclient.Application"
}

tasks.withType<JavaCompile>() {
    options.encoding = "UTF-8"
    options.compilerArgs.add("-Xlint:deprecation")
}

tasks.withType<Jar>() {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from(sourceSets.main.get().output)

    dependsOn(configurations.runtimeClasspath)
    from({
        configurations.runtimeClasspath.get().filter{ it.name.endsWith("jar")}.map { zipTree(it) }
    })
    manifest {
        attributes["Main-Class"] = application.mainClass
    }
}


tasks.withType<Javadoc>() {
    options.encoding = "UTF-8"
}

tasks.withType<Test> {
    useJUnitPlatform()
}